--- a/exercicios/6_1/style.css
+++ b/exercicios/6_1/style.css
@@ -32,6 +32,21 @@ body{
 
 button{
     border-radius: 3px;
-    padding: 5px;
-    font-size: 14px
+    padding: 15px;
+    font-size: 20px;
+    background-color: lawngreen;    
+}
+
+.resumo-form{
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    background-color: darkcyan;
+    color: khaki;
+}
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
